[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Props/Missile_01.png" type="Texture" id=1]
[ext_resource path="res://src/game/environment/items/ManaKit.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Props/Explosion_01.png" type="Texture" id=3]
[ext_resource path="res://src/game/shaders/dissolve.tres" type="Shader" id=4]
[ext_resource path="res://assets/sounds/collect_pick_up.mp3" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/fragment_number = Vector2( 20, 20 )
shader_param/dissolve_state = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Icon:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/Icon:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container/Icon/halo:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.34902 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Container/Icon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.025, 0.025 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Container:material:shader_param/dissolve_state")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Icon:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.49141 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00124514, 0.115024, 0.249631, 0.383591, 0.488068 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.06, 0.06 ), Vector2( 0.07, 0.07 ), Vector2( 0.1, 0.1 ), Vector2( 0.11, 0.11 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.492258 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container:material:shader_param/dissolve_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00260803, 0.489005 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.2
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.36, 0.75, 1.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Icon/halo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.37, 0.76, 1.08, 1.09 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 0.34902 ), Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 0.215686 ) ]
}

[node name="ManaKit" type="Node2D"]
script = ExtResource( 2 )

[node name="Container" type="Node2D" parent="."]

[node name="Icon" type="Sprite" parent="Container"]
material = SubResource( 6 )
scale = Vector2( 0.025, 0.025 )
z_index = 1
texture = ExtResource( 1 )

[node name="halo" type="Sprite" parent="Container/Icon"]
self_modulate = Color( 1, 1, 1, 0.34902 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="HitBox" type="Area2D" parent="Container"]
collision_layer = 0
collision_mask = 2
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/HitBox"]
position = Vector2( -1.42109e-14, -2.38419e-07 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 2 )

[node name="pickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Container/HitBox" to="." method="_on_HitBox_body_entered"]
